force-app/main/default/objects/Route_Station__c/Route_Station__c.object-meta.xml
<CustomObject>
    <label>Route Station</label>
    <nameField>
        <label>Route Staion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Stations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>