force-app/main/default/objects/Route_Station__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>