force-app/main/default/objects/Route_Station__c/fields/Main_Route__c.field-meta.xml
<CustomField>
    <fullName>Main_Route__c</fullName>
    <label>Main Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Route Stations</relationshipLabel>
    <relationshipName>Route_Stations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>