force-app/main/default/objects/Route_Station__c/fields/Previous_Station__c.field-meta.xml
<CustomField>
    <fullName>Previous_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Station</label>
    <referenceTo>Route_Station__c</referenceTo>
    <relationshipLabel>Route Stations</relationshipLabel>
    <relationshipName>Route_Stations</relationshipName>
    <type>Lookup</type>
</CustomField>