force-app/main/default/objects/Route_Station__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Previous_Station__c</columns>
    <columns>Main_Route__c</columns>
    <columns>Distance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>